Fixed alignment error on the rides page. (removed unnecessary padding on the find a ride box.)

--- a/rootlessme/web/css/ride.css
+++ b/rootlessme/web/css/ride.css
@@ -192,7 +192,6 @@ tbody {
 .middleRidesFormArea
 {
     display: inline-block;
-    padding-left: 15px;
 }
 
 #map {
